OLCS-17606: fixed spacing issue on printable pages

--- a/assets/_styles/themes/print.scss
+++ b/assets/_styles/themes/print.scss
@@ -160,7 +160,7 @@ tfoot:before {
  */
 .printable {
 
-  padding-top: 100px;
+  padding-top: 60px;
 
   @media print {
     padding-top: 20px;
